@@ -1,3 +1,6 @@
+16 February 2007: Wouter
+	- Updated testbed script, works better by using make on remote end.
+
 15 February 2007: Wouter
 	- port to FreeBSD 4.11 Dec Alpha. Also works on Solaris 10 sparc64,
 	  Solaris 9, FreeBSD 6, Linux i386 and OSX powerpc.
